--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "dev": "nodemon app.js"
   },
   "author": "Aditya",
-  "contributors": ["Pam","Carissa","Aditya"],
+  "contributors": [
+    "Pam",
+    "Carissa",
+    "Aditya"
+  ],
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
